SPP-5674 fix layout issue
Resolves: SPP-5674

--- a/demo/src/components/sections/SrStyleGuideLayouts/SrStyleGuideLayouts.scss
+++ b/demo/src/components/sections/SrStyleGuideLayouts/SrStyleGuideLayouts.scss
@@ -1,6 +1,6 @@
 @import "../../../../../src/plugins/vuetify/preset/style/scss/mixins/breakpoints";
 
-#sr-style-guide-layouts .page-layout--slim, #sr-style-guide-layouts .sr-code-block {
+#sr-style-guide-layouts .page-layout--slim, #sr-style-guide-layouts #slim-layout .sr-code-block {
   margin: 0 auto 48px auto;
   padding: 0 30px;
   @include media-breakpoint-up(sm) {
@@ -9,4 +9,9 @@
   @include media-breakpoint-up(md) {
     max-width: $container-slim-width;
   }
+}
+
+#sr-style-guide-layouts #standard-layout .sr-code-block {
+  margin: 0 auto 70px auto;
+  padding: 0 30px;
 }
